--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.7
+      - name: Bootstrap poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python - -y
       - name: Install dependencies
         run: poetry install
       - name: Compile
@@ -28,6 +31,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.7
+      - name: Bootstrap poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python - -y
       - name: Install dependencies
         run: poetry install
       - name: Build
