--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ backports-cached_property = "1.0.2"
 httpx = "0.23.3"
 types-backports = "0.1.3"
 
+[tool.poetry.dev-dependencies]
+mypy = "0.971"
+
             
             [build-system]
             requires = ["poetry-core"]
