--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           poetry config repositories.remote https://test.pypi.org/legacy/
           poetry config http-basic.remote "$PYPI_USERNAME" "$PYPI_PASSWORD"
-          poetry publish --build --repository remote
+          poetry --no-interaction -v publish --build --repository remote
         env:
           PYPI_USERNAME: ${ secrets.$PYPI_USERNAME }
           PYPI_PASSWORD: ${ secrets.$PYPI_PASSSWORD }
