Add debug statements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
             [tool.poetry]
             name = "fern-nursery"
-            version = "0.0.64b"
+            version = "0.0.64c"
             description = ""
             authors = []
             packages = [
